--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -25,6 +25,8 @@ LORIA/INRIA Nancy Grand-Est,\\
 Xxx
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{COOJA and MSPSim}
 
 Provided by the Contiki OS project~\cite{ContikiOS}, the COOJA network
@@ -64,9 +66,65 @@ including COOJA-based simulations, since motes based on MSP430 MCUs are
 more commonly distributed and used: we can especially think to the pervasive
 TelosB/SkyMote family, or to Zolertia's Z1 platform.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Timing Inaccuracy Problem in MSPSim}
 
+When performing our own simulations with virtual networks of MSP430-based
+motes, we noticed timing inaccuracies in comparison to experiences made
+on actual hardware. More precisely, we noticed that our simulations showed
+unexplained delays during packet transmission (TX) over the radio medium,
+that weren't observed during similar experiences on physical motes.
+We then investigated the problem, and discovered the following results.
 
+The problem concerns the emulation of the TI ChipCon CC2420 radio
+transceiver by the MSPSim software package.
+
+The differences appear on one precise operation: when loading packet data
+into the transmission (TX) buffer of the emulated radio transceiver.
+MSPSim, when emulating the CC2420 transceiver, performs TX buffer loading
+much more slowly than the physical CC2420 chip actually does.
+
+A simple example program, which only role is to load a huge packet
+(110 bytes, that is: near the maximum size for IEEE
+802.15.4\footnotemark[1] data packets) compiled for and run on
+Zolertia Z1 hardware platform, clearly shows this timing difference.
+The results of the comparison between execution on a simulted Z1 mote
+in COOJA/MSPSim and on physical Z1 hardware is shown in Table
+\ref{TblTXPktLoadDelays} hereafter.
+
+\footnotetext[1]{IEEE 802.15.4 is the standard defining the physical
+(PHY) layer that the involved CC2420 radio transceiver---as well as
+many others---communicates on.}
+
+\begin{table}[!h]
+\centering
+\begin{tabular}{|l|r|r|}
+\hline
+Operating System / SPI Driver &  Cooja Sim.  & Hardware Test \\
+\hline
+RIOT OS / Standard (Safe)     &   89 ticks   &  32 ticks \\ 
+RIOT OS / Fast SPI Write      &   36 ticks   &  14 ticks \\
+Contiki OS / Fast SPI Write   &   14 ticks   &   7 ticks \\
+\hline
+\end{tabular}
+\caption{\small Delays observed for loading packets into CC2420 TX buffer,
+using various software platforms and implementations.\\
+Values are given in ``ticks'' of \texttt{rtimer/hwtimer}, both of these
+timers incrementing at a rate of 32,768~Hz. The unit is thus a fixed period
+of time equal to about 30.5 microseconds.}
+\label{TblTXPktLoadDelays}
+\end{table}
+
+We thus see that the inaccuracy in timing for the TX buffer loading operation
+is very important: simulated loading delay is 2 to 3 times larger than
+actual delay on hardware!
+
+Such a difference can be expected to have serious consequences on
+the validity of evaluations made with COOJA simulations, more precisely
+on time and performance evaluations.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Consequences}
 
