--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -35,3 +35,13 @@
   PUBLISHER =   {ICST}
 }
 
+@INPROCEEDINGS{RIOT,
+  AUTHOR =      {O. Hahm and E. Baccelli and M. G\"unes and M. W\"ahlisch
+                 and T. C. Schmidt},
+  TITLE =      {{RIOT OS: Towards an OS for the Internet of Things}},
+  BOOKTITLE =   {INFOCOM 2013, Poster Session},
+  YEAR =        {2013},
+  MONTH =       {April},
+  NOTE =        {\texttt{http://www.riot-os.org/}}
+}
+
