--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,10pt]{article}
 
 \usepackage[T1]{fontenc}
+\usepackage{rotfloat}
 
 \title{Timing Inaccuracy in MSPSim Emulator: Consequences on COOJA Simulations}
 \author{
@@ -98,21 +99,91 @@ layer (PHY) that the involved CC2420 radio transceiver---as well as
 many others---communicates on. The absolute maximum size for IEEE
 802.15.4 data packets is 127 8-bit bytes.}
 
-\begin{table}[!h]
+\begin{sidewaystable}[!p]
 \centering
-\begin{tabular}{|l|r|r|}
+
+\newcommand{\ticks}[1]{#1 ticks}
+\newcommand{\moy}[1]{$\mu=$ \ticks{#1}}
+\newcommand{\ect}[1]{$\sigma=$ \ticks{#1}}
+\newcommand{\estus}[1]{($\approx$ #1 $\mu$sec.)}
+\newcommand{\prctv}[1]{#1\% exp. value}
+
+\begin{tabular}{|l|rr|rr|rcl|}
 \hline
-Operating System / SPI Driver &  Cooja Sim.  & Hardware Test \\
+Pkt. Size & \multicolumn{2}{c|}{Cooja Simulation}
+          & \multicolumn{2}{c|}{Hardware Experiment}
+          & \multicolumn{3}{c|}{Mean Difference (under-estimation)} \\
 \hline
-RIOT OS / Standard (Safe)     &   89 ticks   &  32 ticks \\ 
-RIOT OS / Fast SPI Write      &   36 ticks   &  14 ticks \\
-Contiki OS / Fast SPI Write   &   14 ticks   &   7 ticks \\
+ Moderate & \moy{6.4} & \ect{0.50} & \moy{7.2} & \ect{0.40}
+          & 0.8 ticks & \estus{24} & \prctv{11.1} \\
+ Medium   & \moy{10.7} & \ect{0.46} & \moy{12.7} & \ect{0.48}
+          & 2.0 ticks & \estus{61} & \prctv{15.7} \\
+ Large    & \moy{18.0} & \ect{0.00} & \moy{20.6} & \ect{0.49}
+          & 2.6 ticks & \estus{79} & \prctv{12.6} \\
 \hline
 \end{tabular}
-\caption{\small Delays observed for loading packets into CC2420 TX buffer,
+\\
+Results with Contiki OS on SkyMote/TelosB hardware\\
+\ \\
+
+\begin{tabular}{|l|rr|rr|rcl|}
+\hline
+Pkt. Size & \multicolumn{2}{c|}{Cooja Simulation}
+          & \multicolumn{2}{c|}{Hardware Experiment}
+          & \multicolumn{3}{c|}{Mean Difference (under-estimation)} \\
+\hline
+ Moderate & \moy{5.0} & \ect{0.14} & \moy{2.3} & \ect{0.44}
+          & 2.7 ticks & \estus{82} & \prctv{117.4} \\
+ Medium   & \moy{8.9} & \ect{0.27} & \moy{4.2} & \ect{0.37}
+          & 4.7 ticks & \estus{143} & \prctv{111.9} \\
+ Large    & \moy{14.0} & \ect{0.14} & \moy{7.2} & \ect{0.39}
+          & 6.8 ticks & \estus{208} & \prctv{94.4} \\
+\hline
+\end{tabular}
+\\
+Results with Contiki OS on Z1 hardware\\
+\ \\
+
+\begin{tabular}{|l|rr|rr|rcl|}
+\hline
+Pkt. Size & \multicolumn{2}{c|}{Cooja Simulation}
+          & \multicolumn{2}{c|}{Hardware Experiment}
+          & \multicolumn{3}{c|}{Mean Difference (under-estimation)} \\
+\hline
+ Moderate & \moy{58.0} & \ect{0.00} & \moy{50.3} & \ect{0.46}
+          & 7.7 ticks & \estus{235} & \prctv{15.3} \\
+ Medium   & \moy{85.2} & \ect{0.39} & \moy{73.6} & \ect{0.50}
+          & 11.6 ticks & \estus{354} & \prctv{15.8} \\
+ Large    & \moy{131.2} & \ect{0.39} & \moy{111.5} & \ect{0.51}
+          & 19.7 ticks & \estus{601} & \prctv{17.7} \\
+\hline
+\end{tabular}
+\\
+Results with RIOT OS on SkyMote/TelosB hardware\\
+\ \\
+
+\begin{tabular}{|l|rr|rr|rcl|}
+\hline
+Pkt. Size & \multicolumn{2}{c|}{Cooja Simulation}
+          & \multicolumn{2}{c|}{Hardware Experiment}
+          & \multicolumn{3}{c|}{Mean Difference (under-estimation)} \\
+\hline
+ Moderate & \moy{46.0} & \ect{0.00} & \moy{16.2} & \ect{0.39}
+          & 29.8 ticks & \estus{909} & \prctv{184.0} \\
+ Medium   & \moy{69.0} & \ect{0.00} & \moy{24.2} & \ect{0.39}
+          & 44.8 ticks & \estus{1367} & \prctv{185.1} \\
+ Large    & \moy{106.8} & \ect{0.39} & \moy{38.0} & \ect{0.00}
+          & 68.8 ticks & \estus{2100} & \prctv{181.1} \\
+\hline
+\end{tabular}
+\\
+Results with RIOT OS on Z1 hardware\\
+\ \\
+
+\caption{Delays observed for loading packets into CC2420 TX buffer,
 using various software platforms and implementations.}
 \label{TblTXPktLoadDelays}
-\end{table}
+\end{sidewaystable}
 
 In Table~\ref{TblTXPktLoadDelays}, delay values are given in ``ticks'' of
 \texttt{rtimer/hwtimer}, both of these timers incrementing at a rate of
