Rajout des articles "victimes" du problème de MSPSim et de la biblio. associée

--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -47,4 +47,186 @@
 
 %% Articles "victimes" du problème de Cooja/MSPSim
 
+@INPROCEEDINGS{Algo-Image-Transfo-2014,
+author={Torkamani-Azar, F. and Ghorashi, S.A. and Kazemi, N.H. and Palmieri, V.},
+  booktitle={Electrical Engineering (ICEE), 2014 22nd Iranian Conference on}, 
+  title={An energy efficient algorithm for image transformation in Wireless Sensor Networks}, 
+  year={2014},
+  month={May},
+  pages={1416--1422},
+  keywords={discrete wavelet transforms;energy conservation;image processing;protocols;telecommunication power management;wireless sensor networks;Contiki simulator;Cooja;TinyOS;WSN;energy efficient algorithm;exponential growth;image processing;image transformation;protocol based on distributed discrete wavelet transform;wireless communication;wireless sensor network;Base stations;Batteries;Computer aided software engineering;Discrete wavelet transforms;Load management;Protocols;Wireless sensor networks;Discrete Wavelet Transform;Distributed Transform;Wireless sensor networks;lifetime of the network},
+  doi={10.1109/IranianCEE.2014.6999755},
+}
+
+@INPROCEEDINGS{Co-RPL-2014,
+author={Gaddour, O. and Koubaa, A. and Rangarajan, R. and Cheikhrouhou, O. and Tovar, E. and Abid, M.},
+  booktitle={Industrial Embedded Systems (SIES), 2014 9th IEEE International Symposium on}, 
+  title={Co-RPL: RPL routing for mobile low power wireless sensor networks using Corona mechanism}, 
+  year={2014},
+  month={June},
+  pages={200--209},
+  keywords={directed graphs;mobility management (mobile radio);routing protocols;wireless sensor networks;Co-RPL;Contiki-Cooja simulator;Corona mechanism;DAG roots;IETF routing protocol standard;directed acyclic graphs roots;low power and lossy networks;low power wireless sensor networks;mobility support;node speed;packet transmission rate;static networks;Corona;Mobile computing;Mobile nodes;Standards;Wireless sensor networks},
+  doi={10.1109/SIES.2014.6871205},
+}
+
+@INPROCEEDINGS{Constrain-Routing-Trees-2014,
+author={Marques, B.F. and Ricardo, M.P.},
+  booktitle={Ad Hoc Networking Workshop (MED-HOC-NET), 2014 13th Annual Mediterranean}, 
+  title={Improving the energy efficiency of WSN by using application-layer topologies to constrain RPL-defined routing trees}, 
+  year={2014},
+  month={June},
+  pages={126--133},
+  keywords={Internet of Things;encoding;energy conservation;power consumption;routing protocols;telecommunication network topology;telecommunication power management;wireless sensor networks;ContikiOS;Cooja simulations;IETF standard protocol;IPv6-based multihop wireless sensor networks;Internet-of-Things;RPL protocol;RPL-defined routing trees;WSN;application-driven extension;application-layer topologies;end-to-end delays;energy consumption;energy efficiency;routing protocol;solution coding;tiny devices inter-networking;Ad hoc networks;Conferences;Routing;Routing protocols;Sensors;Wireless sensor networks;Application-Driven WSN;Con-tikiOS;Internet-of-Things (IoT);RPL;Wireless Sensor Network (WSN)},
+  doi={10.1109/MedHocNet.2014.6849114},
+}
+
+@INPROCEEDINGS{Contiki-RPL-Eval-2014,
+ author = {Zhang, Tao and Li, Xianfeng},
+ title = {Evaluating and Analyzing the Performance of RPL in Contiki},
+ booktitle = {Proceedings of the First International Workshop on Mobile Sensing, Computing and Communication},
+ series = {MSCC '14},
+ year = {2014},
+ isbn = {978-1-4503-2986-6},
+ location = {Philadelphia, Pennsylvania, USA},
+ pages = {19--24},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2633675.2633678},
+ doi = {10.1145/2633675.2633678},
+ acmid = {2633678},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {RPL protocol, WSN, contiki},
+}
+
+@INPROCEEDINGS{DINAS-2014,
+author={Amoretti, M. and Alphand, O. and Ferrari, G. and Rousseau, F. and Duda, A.},
+  booktitle={Wireless Communications and Networking Conference (WCNC), 2014 IEEE}, 
+  title={DINAS: A distributed naming service for all-IP wireless sensor networks}, 
+  year={2014},
+  month={April},
+  pages={2781--2786},
+  keywords={IP networks;Internet of Things;access protocols;cache storage;data structures;personal area networks;routing protocols;wireless sensor networks;6LoWPAN;Bloom filters;ContikiMAC;Cooja simulations;DINAS;DNS server;IP addresses;IPv6;Internet of Things;RPL;UDP-based overlay routing strategy;all-IP wireless sensor networks;centralized naming service;distributed caches;distributed naming service;node descriptions;routing protocol;IP networks;Mobile communication;Mobile computing;Routing;Subspace constraints;Wireless networks;Wireless sensor networks;Bloom filters;Naming Service;Resource Discovery;Wireless Sensor Networks},
+  doi={10.1109/WCNC.2014.6952869},
+}
+
+@article{Efficient-Distrib-Svc-Discovery-2014,
+year={2014},
+issn={1022-0038},
+journal={Wireless Networks},
+volume={20},
+number={8},
+doi={10.1007/s11276-014-0749-3},
+title={Towards efficient distributed service discovery in low-power and lossy networks},
+url={http://dx.doi.org/10.1007/s11276-014-0749-3},
+publisher={Springer US},
+keywords={6LoWPAN; Low-power and lossy networks; Service discovery; Trickle algorithm; Web/internet of things},
+author={Djamaa, Badis and Richardson, Mark and Aouf, Nabil and Walters, Bob},
+pages={2437--2453},
+language={English}
+}
+
+@ARTICLE{Key-Mgmt-2015,
+author={Seung-Hyun Seo and Jongho Won and Sultana, S. and Bertino, E.},
+  journal={Information Forensics and Security, IEEE Transactions on}, 
+  title={Effective Key Management in Dynamic Wireless Sensor Networks}, 
+  year={2015},
+  month={Feb},
+  volume={10},
+  number={2},
+  pages={371--383},
+  keywords={cryptographic protocols;telecommunication traffic;wireless sensor networks;Contiki OS;Cooja simulator;WSN;certificateless-effective key management protocol;dynamic wireless sensor networks;encryption key protocols;forward and backward key secrecy;key management;military sensing and tracking;node mobility;patient status monitoring;traffic flow monitoring;Encryption;Protocols;Public key;Vehicle dynamics;Wireless sensor networks;Wireless sensor networks;certificateless public key cryptography;key management scheme},
+  doi={10.1109/TIFS.2014.2375555},
+  ISSN={1556-6013},
+}
+
+@INPROCEEDINGS{Lightweight-Multicast-Forwarding-2014,
+author={Antonini, M. and Cirani, S. and Ferrari, G. and Medagliani, P. and Picone, M. and Veltri, L.},
+  booktitle={Software, Telecommunications and Computer Networks (SoftCOM), 2014 22nd International Conference on}, 
+  title={Lightweight multicast forwarding for service discovery in low-power IoT networks}, 
+  year={2014},
+  month={Sept},
+  pages={133--138},
+  keywords={Internet of Things;smart phones;Contiki-based node;Cooja simulator;Internet of Things;LLN;SO;Smart Objects;lightweight forwarding algorithm;lightweight multicast forwarding;low-power IoT network;low-power and lossy network;service discovery;Energy consumption;IP networks;Multicast protocols;Random access memory;Read only memory;Unicast},
+  doi={10.1109/SOFTCOM.2014.7039103},
+}
+
+@ARTICLE{Probing-Mech-wu-2015,
+author = {Wu, Xiuchao and Brown, Kenneth N. and Sreenan, Cormac J.}, 
+title = {Contact Probing Mechanisms for Opportunistic Sensor Data Collection},
+year = {2015}, 
+doi = {10.1093/comjnl/bxv005}, 
+URL = {http://comjnl.oxfordjournals.org/content/early/2015/02/15/comjnl.bxv005.abstract}, 
+eprint = {http://comjnl.oxfordjournals.org/content/early/2015/02/15/comjnl.bxv005.full.pdf+html}, 
+journal = {The Computer Journal} 
+}
+
+@INPROCEEDINGS{RPL-Eval-Power-Lines-2014,
+author={Balmau, O. and Dzung, D. and Karaagac, A. and Nesovic, V. and Paunovic, A. and Pignolet, Y.A. and Tehrani, N.A.},
+  booktitle={Smart Grid Communications (SmartGridComm), 2014 IEEE International Conference on}, 
+  title={Evaluation of RPL for medium voltage power line communication}, 
+  year={2014},
+  month={Nov},
+  pages={446--451},
+  keywords={IP networks;carrier transmission on power lines;embedded systems;power grids;routing protocols;COOJA network simulator;IPv6 routing protocol;PLC links;RPL evaluation;electricity distribution;embedded OS Contiki networking stack;grid layout;intelligent grid;local utility;low-power devices;medium voltage grid simulation;medium voltage power line communication;networking protocols;wireless transmission power;Interference;Medium voltage;Multiaccess communication;Power line communications;Protocols;Signal to noise ratio;Smart grids},
+  doi={10.1109/SmartGridComm.2014.7007687},
+}
+
+@INPROCEEDINGS{RPL-GreenHouse-Convgc-Time-2014,
+author={Arunkumar, M. and Alagumeenaakshi, M.},
+  booktitle={Green Computing Communication and Electrical Engineering (ICGCCEE), 2014 International Conference on}, 
+  title={RPL optimization for precise green house management using wireless sensor network}, 
+  year={2014},
+  month={March},
+  pages={1--6},
+  keywords={ad hoc networks;farming;humidity;routing protocols;soil;telecommunication power management;wireless sensor networks;COOJA simulator;Contiki OS;MATLAB curve fitting tool;RPL optimization;ad hoc WSN tree formation;battery efficiency;farming;green house management;network efficiency;routing protocol for low power and lossy network;routing table correction;routing tree;soil humidity;wireless sensor network;Analytical models;Convergence;Mathematical model;Optimization;Routing;Routing protocols;Wireless sensor networks;Contiki OS;Green House Monitoring;RPL;Wireless Sensor Networks},
+  doi={10.1109/ICGCCEE.2014.6922254},
+}
+
+@INPROCEEDINGS{RPL-Pref-Compar-6LoWPAN-2014,
+author={Haofei Xie and Guoqi Zhang and Delong Su and Ping Wang and Feng Zeng},
+  booktitle={Software Engineering and Service Science (ICSESS), 2014 5th IEEE International Conference on}, 
+  title={Performance evaluation of RPL routing protocol in 6lowpan}, 
+  year={2014},
+  month={June},
+  pages={625--628},
+  keywords={routing protocols;telecommunication network topology;wireless sensor networks;6lowpan;AODV routing protocol;COOJA;DYMO routing protocol;RPL routing protocol;WSN;average packet end-to-end delay;contiki operating system;network topology;performance evaluation;reactive routing protocols;routing overhead;wireless sensor networks;Delays;Network topology;Routing;Routing protocols;Topology;Wireless sensor networks;End-to-End Delay;RPL Routing protocol;Simulation;comparison;control overhead},
+  doi={10.1109/ICSESS.2014.6933646},
+  ISSN={2327-0586},
+}
+
+@INPROCEEDINGS{TinySDN-2014,
+author={Trevizan de Oliveira, B. and Borges Margi, C. and Batista Gabriel, L.},
+  booktitle={Communications (LATINCOM), 2014 IEEE Latin-America Conference on}, 
+  title={TinySDN: Enabling multiple controllers for software-defined wireless sensor networks}, 
+  year={2014},
+  month={Nov},
+  pages={1--6},
+  keywords={software defined networking;wireless sensor networks;COOJA simulator;SDN controller node;SDN end device;SDN switch;SDN-enabled sensor node;TinyOS-based SDN framework;TinySDN;software-defined wireless sensor networks;Delays;Network topology;Proposals;Protocols;Random access memory;Wireless communication;Wireless sensor networks},
+  doi={10.1109/LATINCOM.2014.7041885},
+}
+
+@INPROCEEDINGS{Trickle-L2-2014,
+author={Ancillotti, E. and Bruno, R. and Conti, M. and Mingozzi, E. and Vallati, C.},
+  booktitle={A World of Wireless, Mobile and Multimedia Networks (WoWMoM), 2014 IEEE 15th International Symposium on}, 
+  title={Trickle-L<sup>2</sup>: Lightweight link quality estimation through Trickle in RPL networks}, 
+  year={2014},
+  month={June},
+  pages={1--9},
+  keywords={radio links;routing protocols;telecommunication network topology;wireless sensor networks;Contiki;IETF;IPv6-based sensor networks;RPL prototype implementation;lightweight link quality estimation;packet delivery rates;routing instability;routing protocol for low-power and lossy networks;trickle-based topology maintenance techniques;utilised links;wireless sensor networks;Estimation;Measurement;Probes;Routing;Standards;Topology;Wireless sensor networks;Contiki OS;Cooja;LLN;RPL;link quality estimation;probing;reliability},
+  doi={10.1109/WoWMoM.2014.6918951},
+}
+
+@ARTICLE{Visual-Sensor-Networks-2014,
+title = {Improving response time in time critical Visual Sensor Network applications},
+journal = {Ad Hoc Networks},
+volume = {23},
+pages = {65--79},
+year = {2014},
+issn = {1570-8705},
+doi = {http://dx.doi.org/10.1016/j.adhoc.2014.06.003},
+url = {http://www.sciencedirect.com/science/article/pii/S1570870514001140},
+author = {Emad Felemban and Adil A. Sheikh and Muhammad Asif Manzoor},
+keywords = {Visual Sensor Network;Priority based routing;Contiki operating system;Real-time \{VSN\} applications;Bit-plane encoding;Progressive image transmission},
+}
+
 
